Bug 479142 - Bookmarks Sidebar doesn't update unless "Show for all documents" checkbox is toggled
Summary: Bookmarks Sidebar doesn't update unless "Show for all documents" checkbox is ...
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.85
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords: qt6, wayland-only
Depends on:
Blocks:
 
Reported: 2023-12-29 05:25 UTC by Doug
Modified: 2024-01-03 17:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Doug 2023-12-29 05:25:28 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open a pdf in Okular
2. Make a change to the document's bookmarks- add, delete, rename from the menu, sidebar, or context menu
3. toggle "Show for all documents" checkbox

OBSERVED RESULT
The bookmarks sidebar does not update after making changes in step 2, but does update after step 3

EXPECTED RESULT
Bookmarks sidebar should update immediately after changing the document's bookmarks in any way

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE Neon Unstable
(available in About System)
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-01-03 13:03:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kbookmarks/-/merge_requests/44
Comment 2 Sune Vuorela 2024-01-03 17:54:46 UTC
Git commit fa97c1d8ff2f0393bbe7ac9278658e63291d2e09 by Sune Vuorela.
Committed on 03/01/2024 at 14:25.
Pushed by cullmann into branch 'master'.

Emit specific changed signal

This happened before dbus removal by dbus sending messages back to
current process. Reintroduce it.

M  +1    -2    src/kbookmarkmanager.cpp

https://invent.kde.org/frameworks/kbookmarks/-/commit/fa97c1d8ff2f0393bbe7ac9278658e63291d2e09