Emit specific changed signal

This happened before dbus removal by dbus sending messages back to
current process. Reintroduce it.

BUG: 479142